# Project_RAST

./: README.md
Computer_Vision/: Shapes from images.py  area.py
Mapping/: README.md
Mapping/PX4-iris_d435/: 1078_iris_d435  README.md  README.md~
Mapping/PX4-iris_d435/iris_d435/: iris_d435.sdf  model.config
Mapping/PX4-iris_d435/realsense_d435/: d435i.sdf  model.config  realsense_d435.sdf
Mapping/PX4-iris_d435i/: 1078_iris_d435i  README.md
Mapping/PX4-iris_d435i/iris_d435i/: iris_d435i.sdf  model.config
Mapping/Rtabmap-ORB setup/: ORB.patch  README.md  rtabmap_orb.launch
Mapping/nbvplanner/: README.md
Mapping/realsense_d435/: model.config
Mapping/simple_simulation/: README.md
Mapping/slam_setup/: README.md  rcS
Pathfinding/: README.md
Pathfinding/Dstarlite/: README.md  Test_cases.py
Pathfinding/MR-DFS/: README.md  cases.py  graphTools.py  mr-dfs.ipy  mr-dfs.py  plotTools.py  rob.py
environmentSetup/: Autonomous Drone Setup Guide.md  Simulation_Info.md  readme.md
environmentSetup/Wind_Plugin_World/: Wind_Guide.md  iris.world
environmentSetup/drone_static/: CMakeLists.txt  package.xml  readme.md
environmentSetup/final_drone/: CMakeLists.txt  package.xml  readme.md
environmentSetup/gdp2020/: CMakeLists.txt  package.xml  readme.md
environmentSetup/gdp2020_add/: CMakeLists.txt  package.xml  readme.md
environmentSetup/gdp2020_add/launch/: gdp2020.launch
environmentSetup/gdp2020_add/models/iris_gdp2020/: model(original).sdf  model.config  model.sdf
environmentSetup/gdp2020_add/worlds/: iris.world
keyboard controller/: README.md
(+120 files in other folders)
